# Motion-Estimated-Video-Trimmer

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  format.sh  motion_vector_DVR_trimmer.cc
config/: motion_cut.env  motion_trim.env
include/: README.md
include/motion_trim/: batch_processor.hpp  config.hpp  ffmpeg_executor.hpp  ffmpeg_queue.hpp  logging.hpp  memory_io.hpp  motion_scanner.hpp  pipeline.hpp  system.hpp  task_queue.hpp  types.hpp
src/: README.md  batch_processor.cpp  ffmpeg_executor.cpp  ffmpeg_queue.cpp  logging.cpp  main.cpp  memory_io.cpp  motion_scanner.cpp  pipeline.cpp  system.cpp  task_queue.cpp
tools/: README.md  cacheLineSize.cpp  extract_mvs.cpp  motion_scalar.cpp
